[CHANGE] Rename package according to herbie's conventions

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nzwbr/herbie-forms",
+    "name": "getherbie/plugin-forms",
     "homepage": "http://www.netzweberei.de",
     "description": "Herbie Plugin Forms",
     "keywords": ["herbie", "plugin", "forms"],
