[CHANGE] Require symfony/security

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "symfony/validator": "2.*",
         "symfony/config": "2.*",
         "symfony/translation": "2.*",
-        "symfony/twig-bridge": "2.*"
+        "symfony/twig-bridge": "2.*",
+        "symfony/security": "2.*"
     },
     "autoload": {
         "psr-4": {
